crates/rome_diagnostics/tests/macros/unknown_location_attr.rs
use rome_diagnostics::Diagnostic;

#[derive(Debug, Diagnostic)]
struct TestDiagnostic {
    #[location(unknown)]
    location: (),
}

fn main() {}
